--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "sift": "^17.0.1",
     "uuid": "^9.0.0",
+    "v-object-inspector": "^0.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
