--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@9.0.6",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
@@ -8,70 +9,56 @@
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
-    "up": "taze major -I",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "up": "taze major -I"
   },
   "dependencies": {
-    "@vueuse/core": "^10.3.0",
+    "@vueuse/core": "^10.9.0",
     "ajv": "^8.12.0",
-    "d3": "^7.8.5",
+    "d3": "^7.9.0",
     "fuse.js": "^6.6.2",
     "iso-639-3": "^3.0.1",
     "lodash": "^4.17.21",
-    "pinia": "^2.1.6",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "sift": "^17.0.1",
-    "uuid": "^9.0.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "sift": "^17.1.3",
+    "uuid": "^9.0.1",
     "v-object-inspector": "^0.1.3",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue": "^3.4.25",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.2",
-    "@iconify-json/fa6-brands": "^1.1.13",
-    "@iconify-json/fa6-regular": "^1.1.13",
-    "@iconify-json/fa6-solid": "^1.1.15",
-    "@storybook/addon-essentials": "7.2.3",
-    "@storybook/addon-interactions": "7.2.3",
-    "@storybook/addon-links": "7.2.3",
-    "@storybook/blocks": "7.2.3",
-    "@storybook/testing-library": "0.2.0",
-    "@storybook/vue3": "7.2.3",
-    "@storybook/vue3-vite": "7.2.3",
-    "@types/d3": "^7.4.0",
-    "@types/lodash": "^4.14.197",
-    "@types/node": "^20.5.0",
-    "@types/uuid": "^9.0.2",
-    "@unocss/eslint-config": "^0.55.0",
-    "@unocss/reset": "^0.55.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue-macros/volar": "^0.13.3",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.47.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "jsdom": "^22.1.0",
-    "pnpm": "^8.6.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.65.1",
-    "storybook": "7.2.3",
-    "taze": "^0.11.2",
-    "typescript": "^5.1.6",
-    "unocss": "^0.55.0",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
-    "unplugin-vue-macros": "^2.4.6",
-    "vite": "^4.4.9",
-    "vite-plugin-pages": "^0.31.0",
-    "vitest": "^0.34.1",
-    "vue-tsc": "^1.8.8"
+    "@antfu/eslint-config": "^2.16.0",
+    "@iconify-json/fa6-brands": "^1.1.19",
+    "@iconify-json/fa6-regular": "^1.1.19",
+    "@iconify-json/fa6-solid": "^1.1.21",
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
+    "@types/uuid": "^9.0.8",
+    "@unocss/eslint-config": "^0.59.4",
+    "@unocss/reset": "^0.59.4",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue-macros/volar": "^0.18.18",
+    "@vue/test-utils": "^2.4.5",
+    "eslint": "^9.1.1",
+    "jsdom": "^24.0.0",
+    "pnpm": "^9.0.6",
+    "sass": "^1.75.0",
+    "taze": "^0.13.7",
+    "typescript": "^5.4.5",
+    "unocss": "^0.59.4",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-macros": "^2.9.1",
+    "vite": "^5.2.10",
+    "vite-plugin-pages": "^0.32.1",
+    "vitest": "^1.5.2",
+    "vue-tsc": "^2.0.14"
   },
   "eslintConfig": {
     "extends": [
       "@antfu",
-      "@unocss",
-      "plugin:storybook/recommended"
+      "@unocss"
     ]
   }
 }
