feat: support image semantic search

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "eslint.config.js", "src/assets/embedding"]
 }
