--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "up": "taze major -I"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.7.5",
     "@vueuse/core": "^13.9.0",
     "ajv": "^8.17.1",
     "d3": "^7.9.0",
@@ -24,7 +25,8 @@
     "uuid": "^13.0.0",
     "v-object-inspector": "^0.1.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "with-progress-bar": "^0.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
@@ -48,7 +50,7 @@
     "unplugin-auto-import": "^20.2.0",
     "unplugin-vue-components": "^29.1.0",
     "unplugin-vue-macros": "^2.14.5",
-    "vite": "^7.1.9",
+    "vite": "^7.1.10",
     "vite-plugin-pages": "^0.33.1",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.1"
