--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "uuid": "^13.0.0",
     "v-object-inspector": "^0.1.3",
     "vue": "^3.5.22",
+    "vue-gtag": "^3.6.3",
     "vue-router": "^4.5.1",
     "with-progress-bar": "^0.1.2"
   },
